force-app/main/default/objects/Achievement_Value__c/Achievement_Value__c.object-meta.xml
<CustomObject>
    <label>Achievement Value</label>
    <nameField>
        <label>Achievement Value Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Achievement Values</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>