force-app/main/default/objects/Achievement_Value__c/fields/Achievement__c.field-meta.xml
<CustomField>
    <fullName>Achievement__c</fullName>
    <label>Achievement</label>
    <referenceTo>Achievement__c</referenceTo>
    <relationshipLabel>Achievement Values</relationshipLabel>
    <relationshipName>AchievementValues</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>