force-app/main/default/objects/Achievement_Value__c/fields/IndexOfValue__c.field-meta.xml
<CustomField>
    <fullName>IndexOfValue__c</fullName>
    <label>Index Of Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>