force-app/main/default/objects/Achievement_Value__c/validationRules/ValueShouldBeAPowerOf2.validationRule-meta.xml
<ValidationRule>
    <fullName>ValueShouldBeAPowerOf2</fullName>
    <active>true</active>
    <errorConditionFormula>Value__c != 1 &amp;&amp; MOD(Value__c, 2) &gt; 0</errorConditionFormula>
    <errorDisplayField>Value__c</errorDisplayField>
    <errorMessage>Value should be a power of 2</errorMessage>
</ValidationRule>